syntax = "proto3";

package provider;

// gRPC Servis Tanımı
service ProviderService {
  rpc CreateProvider (CreateProviderRequest) returns (ProviderResponse);
  rpc FindAll (Empty) returns (ProviderList);
  rpc FindOne (ProviderIdRequest) returns (ProviderResponse);
  rpc UpdateProvider (UpdateProviderRequest) returns (ProviderResponse);
  rpc DeleteProvider (ProviderIdRequest) returns (ProviderResponse);
}

// Boş istekler için
message Empty {}

// Tekil ID istekleri için
message ProviderIdRequest {
  string id = 1;
}

// Usta Oluşturma İsteği
message CreateProviderRequest {
  string first_name = 1;
  string last_name = 2;
  string phone = 3;
  string email = 4;
  repeated string tags = 5;
}

// Usta Güncelleme İsteği
message UpdateProviderRequest {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string phone = 4;
  string email = 5;
  repeated string tags = 6;
}

// Tekil Usta Dönüşü
message ProviderResponse {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string phone = 4;
  string email = 5;
  repeated string tags = 6;
}

// Liste Dönüşü
message ProviderList {
  repeated ProviderResponse providers = 1;
}